Bug 101766 - FILESAVE: In 'Save to Remote Server' dialog the 'Create Folder' button doesn't work
Summary: FILESAVE: In 'Save to Remote Server' dialog the 'Create Folder' button doesn'...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Linguistic (show other bugs)
Version:
(earliest affected)
5.1.3.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks: CMIS WebDAV
  Show dependency treegraph
 
Reported: 2016-08-28 14:47 UTC by Giuseppe Castagno (aka beppec56)
Modified: 2021-11-18 20:18 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Giuseppe Castagno (aka beppec56) 2016-08-28 14:47:25 UTC
To reproduce use the experimental OpenKM public WebDAV:

1) confirm you don't have the LO custom dialogs enabled;

2) with a browser login at: http://demo.openkm.com/OpenKM/login, choose whatever user+password you prefer from the list given there; user name and password will be used to access the server from LO.

3) load a test file of your choice into LO from your PC

4) select 'File > Save to Remote Server' from menu

5) add the new server to the list of available server using the 'Add service' button, with the following setup:

Host: demo.openkm.com
port: 80
label: your choice
root: /OpenKM/webdav/

confirm and input user and password of point 1)

5) navigate to okm_personal/<user name> folder;

6) press the 'Create Folder' button;

7) a dialog to request the folder name is show, press OK;

8) the same dialog is presented again, navigate to the same parent folder using the browser connected as in 1) and press the refresh button in the OpenKM toolbar: no folder was created.
Comment 1 Julien Nabet 2016-08-28 20:51:03 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

Here is console log I noticed:
warn:ucb.ucp.webdav:23406:1:ucb/source/ucp/webdav-neon/webdavcontent.cxx:3735: Content::getResourceType returned errors, DAV: 2, http error: 0
Comment 2 Giuseppe Castagno (aka beppec56) 2016-08-29 06:41:42 UTC
(In reply to Julien Nabet from comment #1)

> warn:ucb.ucp.webdav:23406:1:ucb/source/ucp/webdav-neon/webdavcontent.cxx:
> 3735: Content::getResourceType returned errors, DAV: 2, http error: 0
That DAV error means "User authentication failed on server", you can find it here:
<http://opengrok.libreoffice.org/xref/core/ucb/source/ucp/webdav-neon/DAVException.hxx#114>.
By looking at the debug log you see this line before the one you reported:

info:ucb.ucp.webdav:24876:1:ucb/source/ucp/webdav-neon/webdavcontent.cxx:423: Content::execute: start: command: getPropertyValues, env: missing

it tells you the xCommandEnvironment is missing, meaning the interaction handler needed for authentication is missing as well.
Comment 3 Commit Notification 2016-08-29 18:43:52 UTC
Giuseppe Castagno committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4e8e637374f8dad5439da39bd0c4b8b0b7c13cde

tdf#101766: Fix new folder creation in 'Save Remote Server' dialog.

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2016-10-03 10:02:56 UTC
Hello,
Is this bug fixed?
If so, could you please close it as RESOLVED FIXED?
Comment 5 Xisco Faulí 2017-09-11 08:29:57 UTC
Dear developer,
This bug has been in ASSIGNED status for more than 3 months without any
activity. Resetting it to NEW.
Please assigned it back to yourself if you're still working on this.
Comment 6 Xisco Faulí 2017-09-11 08:30:44 UTC
(In reply to Julien Nabet from comment #1)
> On pc Debian x86-64 with master sources updated today, I could reproduce
> this.
> 
> Here is console log I noticed:
> warn:ucb.ucp.webdav:23406:1:ucb/source/ucp/webdav-neon/webdavcontent.cxx:
> 3735: Content::getResourceType returned errors, DAV: 2, http error: 0

Hi Julien,
Could you please check whether this bug is fixed?
Comment 7 Julien Nabet 2017-09-11 19:24:33 UTC
It seems to hang after having filled the user and passwd.
Save button is disabled, I can click "Cancel" and it indeed cancels but I can't see any directory.

Here are the last traces on console:
(pkix_CacheCert_Add: PKIX_PL_HashTable_Add for Certs skipped: entry existed
(pkix_CacheCert_Add: PKIX_PL_HashTable_Add for Certs skipped: entry existed
(pkix_CacheCert_Add: PKIX_PL_HashTable_Add for Certs skipped: entry existed
(pkix_CacheCert_Add: PKIX_PL_HashTable_Add for Certs skipped: entry existed
(pkix_CacheCert_Add: PKIX_PL_HashTable_Add for Certs skipped: entry existed
Comment 8 QA Administrators 2018-10-23 02:50:02 UTC Comment hidden (obsolete)
Comment 9 QA Administrators 2020-10-23 04:14:51 UTC Comment hidden (obsolete)
Comment 10 Gabor Kelemen (Collabora) 2021-11-18 20:18:30 UTC
I can't reproduce this issue in bibisect-linux-5.3 master or newer 7.2, 7.3.

The console message from comment 7 is also gone, although I saw it in bibisect-linux-5-3 oldest, where folder creation indeed did not work.