tdf#101766: Fix new folder creation in 'Save Remote Server' dialog.

Change-Id: I5297918ff6acf0631b8be370de3ac96bed474a47